# superx

./: .gitignore  ARCHITECTURE.md  Cargo.toml  NOTICE  README.md  REMEDIATION.md  SUPERX_SCHEMA.md
.claude/skills/zero-trust-execution/: SKILL.md
.github/workflows/: skill-audit.yml
archive/: 00-architect-review.md  00b-architect-review-2.md  01-architecture.md  02-state-and-persistence.md  03-execution-and-mcp.md  04-graphify-ingestion.md  05-meta-harness.md  06-state-sync.md  07-hardware-tiers.md  08-failure-modes.md  09-cargo-workspace.md  10-libraries.md  11-prompt-discipline.md  12-emission.md  13-quotas.md  14-interactive-capture.md  15-full-schema-reference.md  AuraOS-Master-Blueprint-v32.0-Structural-Swarm-Kernel.md  AuraOS-Master-Blueprint-v37.0-Unified-Modular-Binary.md  AuraOS-Master-Blueprint-v41.1-Hardened-Reset.md  AuraOS-Physical-Execution-Roadmap-The-Iron-Foundation.md  SuperX-Master-Blueprint-v32.0-Structural-Swarm-Kernel.md  SuperX-Master-Blueprint-v37.0-Unified-Modular-Binary.md  SuperX-Master-Blueprint-v41.1-Hardened-Reset.md  SuperX-Physical-Execution-Roadmap-The-Iron-Foundation.md
crates/superx-agent/: Cargo.toml
crates/superx-agent/src/: lib.rs
crates/superx-bootstrap/: Cargo.toml
crates/superx-bootstrap/src/: lib.rs
crates/superx-cli/: Cargo.toml
crates/superx-cli/src/: lib.rs  main.rs
crates/superx-cli/tests/: cli.rs  core_capabilities.rs  integration.rs  runner_e2e.rs  schedule_scd2.rs
crates/superx-compiler/: Cargo.toml
crates/superx-compiler/src/: lib.rs
crates/superx-dispatcher/: Cargo.toml
crates/superx-dispatcher/src/: lib.rs
crates/superx-driver-claude-code/: Cargo.toml
crates/superx-driver-claude-code/src/: lib.rs  watcher.rs
crates/superx-driver-claude-code/tests/: probe.rs  watcher.rs
crates/superx-emission/: Cargo.toml
crates/superx-emission/src/: lib.rs
crates/superx-gmaster/: Cargo.toml
crates/superx-gmaster/src/: extract.rs  lib.rs  metamodel.rs  substrate.rs
crates/superx-gmaster/tests/: infer_self.rs
crates/superx-harness/: Cargo.toml
crates/superx-harness/src/: lib.rs
crates/superx-inference/: Cargo.toml
crates/superx-inference/src/: lib.rs
crates/superx-ingest/: Cargo.toml
crates/superx-ingest/src/: lib.rs
crates/superx-kernel/: Cargo.toml
crates/superx-kernel-bootstrap/: Cargo.toml
crates/superx-kernel-bootstrap/src/: lib.rs
crates/superx-kernel-bootstrap/tests/: bootstrap.rs
crates/superx-kernel-capture/: Cargo.toml
crates/superx-kernel-capture/src/: lib.rs
crates/superx-kernel-capture/tests/: capture.rs
crates/superx-kernel-discovery/: Cargo.toml
crates/superx-kernel-discovery/src/: lib.rs
crates/superx-kernel-discovery/tests/: discovery.rs
crates/superx-kernel/src/: cursor.rs  error.rs  kernel.rs  lib.rs  lifecycle.rs  metamodel.rs  parameters.rs  registry.rs  schema.rs  substrate.rs  telemetry.rs
crates/superx-kernel/tests/: bootstrap_and_verbs.rs  cursor.rs  lifecycle.rs  parameters.rs  registry.rs  service_signin.rs  substrate.rs  telemetry.rs
crates/superx-kernel/tests/common/: mod.rs
crates/superx-mcp/: Cargo.toml
crates/superx-mcp/src/: lib.rs  main.rs
crates/superx-proposer/: Cargo.toml
crates/superx-proposer/src/: lib.rs
crates/superx-runner/: Cargo.toml
crates/superx-runner/src/: lib.rs
docs/: QA_TEST_PATH.md  ROADMAP.md
docs/audits/: 2026-05-19-tech-debt-audit.md
schema/: kernel.surql  superx.surql
scripts/: deploy-schema.sh
tools/: skill_audit.py
