[workspace]
members = [
    "crates/superx-kernel",
    "crates/superx-ingest",
    "crates/superx-compiler",
    "crates/superx-inference",
    "crates/superx-harness",
    "crates/superx-emission",
    "crates/superx-proposer",
    "crates/superx-bootstrap",
    "crates/superx-agent",
    "crates/superx-cli",
    "crates/superx-mcp"
]
resolver = "2"

[workspace.dependencies]
surrealdb = { version = "2.1", features = ["kv-rocksdb"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
jsonschema = "0.17"
uuid = { version = "1.0", features = ["v7"] }
tempfile = "3.8"
candle-core = "0.8"
candle-transformers = "0.8"
tokenizers = "0.19"
hf-hub = "0.3"
rmcp = { version = "1.7.0", features = ["server", "transport-io"] }
async-trait = "0.1"
walkdir = "2.5"
wasmtime = "22.0"
prost = "0.12"
rdkafka = { version = "0.36" }
futures-util = "0.3"
