[workspace]
resolver = "2"
members = ["crates/superx-kernel"]

[workspace.package]
edition      = "2021"
version      = "0.1.0"
license      = "Apache-2.0"
authors      = ["Constantin Alexander <constantin@dedomena.io>"]
rust-version = "1.83"

[workspace.dependencies]
# Substrate SDK.
#
# kv-mem is bundled so integration tests can spin up an embedded
# in-memory engine via `surrealdb::engine::any::connect("mem://")`.
# protocol-ws is the wire protocol the operator-provisioned standalone
# server speaks; production deployments point the kernel at a `ws://`
# or `wss://` URL.
surrealdb  = { version = "3", default-features = false, features = ["protocol-ws", "kv-mem"] }

# Std-adjacent toolkit.
chrono     = { version = "0.4", default-features = false, features = ["serde", "std", "clock"] }
serde      = { version = "1",   features = ["derive"] }
serde_json = { version = "1" }
thiserror  = "2"
tokio      = { version = "1",   features = ["rt", "rt-multi-thread", "macros"] }
uuid       = { version = "1",   features = ["v7", "serde"] }
