[package]
name = "superx-bootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
superx-kernel = { path = "../superx-kernel" }
surrealdb.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid = { version = "1.0", features = ["v7", "v5"] }
async-trait.workspace = true
futures-util.workspace = true
