[package]
name        = "superx-cli"
description = "Operator CLI for SuperX — connect to the substrate, seed the metamodel, run the OS."

edition      .workspace = true
version      .workspace = true
license      .workspace = true
authors      .workspace = true
rust-version .workspace = true

[[bin]]
name = "superx"
path = "src/main.rs"

[dependencies]
clap           .workspace = true
tokio          .workspace = true
superx-kernel  = { path = "../superx-kernel" }
superx-gmaster = { path = "../superx-gmaster" }
