[package]
name        = "superx-cli"
description = "SuperX operator CLI — the `superx` binary. L3 app: `superx kernel bootstrap | modules list | stats`."

edition      .workspace = true
version      .workspace = true
license      .workspace = true
authors      .workspace = true
rust-version .workspace = true

[[bin]]
name = "superx"
path = "src/main.rs"

[dependencies]
async-trait              = { workspace = true }
clap                     = { workspace = true }
linkme                   = { workspace = true }
serde_json               = { workspace = true }
superx-driver-claude-code = { path = "../superx-driver-claude-code" }
superx-kernel            = { path = "../superx-kernel" }
superx-kernel-bootstrap  = { path = "../superx-kernel-bootstrap" }
superx-kernel-capture    = { path = "../superx-kernel-capture" }
superx-kernel-discovery  = { path = "../superx-kernel-discovery" }
tokio                    = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }

[dev-dependencies]
surrealdb = { workspace = true }
