[package]
name = "superx-emission"
version = "0.1.0"
edition = "2021"

[dependencies]
superx-kernel = { path = "../superx-kernel" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
rdkafka.workspace = true
reqwest = { version = "0.11", features = ["json"] }
futures-util.workspace = true
surrealdb.workspace = true
chrono.workspace = true
