[package]
name = "superx-inference"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core.workspace = true
candle-transformers.workspace = true
tokenizers.workspace = true
hf-hub.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
