[package]
name = "superx-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
surrealdb.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
jsonschema.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
