[package]
name        = "superx-kernel"
description = "SuperX substrate kernel — service-account-only access layer for the locked SurrealDB schema."

edition      .workspace = true
version      .workspace = true
license      .workspace = true
authors      .workspace = true
rust-version .workspace = true

[dependencies]
chrono     .workspace = true
serde      .workspace = true
serde_json .workspace = true
surrealdb  .workspace = true
thiserror  .workspace = true
uuid       .workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
