[package]
name = "superx-mcp"
version = "0.1.0"
edition = "2021"

[lib]
name = "superx_mcp"
path = "src/lib.rs"

[[bin]]
name = "superx-mcp"
path = "src/main.rs"

[dependencies]
superx-kernel = { path = "../superx-kernel" }
superx-ingest = { path = "../superx-ingest" }
superx-compiler = { path = "../superx-compiler" }
superx-agent = { path = "../superx-agent" }
superx-emission = { path = "../superx-emission" }
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid.workspace = true
