[package]
name = "superx-proposer"
version = "0.1.0"
edition = "2021"

[dependencies]
superx-kernel = { path = "../superx-kernel" }
superx-inference = { path = "../superx-inference" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true
surrealdb.workspace = true
