[package]
name = "superx-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
superx-kernel = { path = "../superx-kernel" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
surrealdb.workspace = true

[dev-dependencies]
tempfile.workspace = true
tracing-subscriber = "0.3"
